; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_fm.c_fm_ena_generate.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_fm.c_fm_ena_generate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fm_ena_generate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @kpreempt_disable()
  %7 = load i32, i32* %3, align 4
  %8 = call i32 (...) @getcpuid()
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @fm_ena_generate_cpu(i32 %7, i32 %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = call i32 (...) @kpreempt_enable()
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @kpreempt_disable(...) #1

declare dso_local i32 @fm_ena_generate_cpu(i32, i32, i32) #1

declare dso_local i32 @getcpuid(...) #1

declare dso_local i32 @kpreempt_enable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
